Added logo and styling for menu bar plus css changes on index page.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <object class="menuBarObject" type="text/html" data="./menuBarComponent/menuBarComponent.html" width="400px" height="75px"></object>
         <img id="featured-image" />
         <svg class="svgSeparator" height="70%" width="60%">
             <ellipse cx="400" cy="250" rx="320" ry="220" />
