Added faded loading of background images.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>DEye</title>
     </head>
 
-    <body>
+    <body id="doc-body">
         <object class="menuBarObject" type="text/html" data="./menuBarComponent/menuBarComponent.html" width="400px" height="75px"></object>
         <img id="featured-image" />
         <svg class="svgSeparator" height="70%" width="60%">
