Moving styling to css file.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body id="doc-body">
         <object class="menuBarObject" type="text/html" data="./menuBarComponent/menuBarComponent.html"></object>
         <img id="featured-image" />
-        <svg class="svgSeparator" height="70%" width="60%">
+        <svg class="svgSeparator">
             <ellipse cx="400" cy="250" rx="320" ry="220" />
         </svg>
         <img id="deye-logo" />
